# tree-sitter-arista-eos

./: CMakeLists.txt  Cargo.toml  Makefile  NOTES.org  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-arista_eos.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_arista_eos/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAristaEOS/: arista_eos.h
bindings/swift/TreeSitterAristaEOSTests/: TreeSitterAristaEOSTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
