[package]
name = "tree-sitter-arista-eos"
description = "Grammars for FRR, Arista EOS, Cisco iOS/NXOS style network configuration files"
version = "0.1.0"
authors = ["m32 <m32@m32.io>"]
license = "GPL"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "arista-eos"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/notm32/tree-sitter-arista-eos"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
