[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-arista-eos"
description = "Grammars for FRR, Arista EOS, Cisco iOS/NXOS style network configuration files"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "arista-eos"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "m32", email = "m32@m32.io" }]
requires-python = ">=3.9"
license.text = "GPL"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/notm32/tree-sitter-arista-eos"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
